--- a/Oneshot-CNN/Test-Case.ipynb
+++ b/Oneshot-CNN/Test-Case.ipynb
@@ -303,16 +303,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = load_model('LeNet.h5')"
+    "model = load_model('LeNet-Reg.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Img1137.jpg</td>\n",
-       "      <td>Adults</td>\n",
+       "      <td>Teenagers</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -404,14 +404,14 @@
       ],
       "text/plain": [
        "      Filename   Category\n",
-       "0  Img1137.jpg     Adults\n",
+       "0  Img1137.jpg  Teenagers\n",
        "1  Img3633.jpg     Adults\n",
        "2  Img1474.jpg     Adults\n",
        "3  Img3459.jpg  Teenagers\n",
        "4  Img5578.jpg    Toddler"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
