Colab File Also Added

--- a/Oneshot-CNN/Test-Case.ipynb
+++ b/Oneshot-CNN/Test-Case.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "from keras.utils import plot_model\n",
     "from keras.layers import concatenate\n",
     "from keras.optimizers import Adam\n",
+    "from keras.regularizers import l2\n",
     "from keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from keras.models import load_model\n",
     "from keras import backend as K\n",
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,16 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d1f85ff7c8>"
+       "<matplotlib.image.AxesImage at 0x1eba92e1648>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +264,7 @@
        "(314, 128, 128, 3)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +293,7 @@
        "(314, 128, 128, 3)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,16 +304,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = load_model('LeNet-Reg.h5')"
+    "# model = load_model('LeNet-Reg-loss-colab.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg = l2(1e-2)\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Conv2D(6, kernel_size = (5, 5), strides = (1, 1), activation = 'relu', input_shape = x_test[0].shape,\n",
+    "                 kernel_regularizer = reg))\n",
+    "model.add(MaxPooling2D(pool_size = (2, 2), strides = (2, 2)))\n",
+    "model.add(Conv2D(16, kernel_size = (5, 5), strides = (1, 1), activation = 'relu', kernel_regularizer = reg))\n",
+    "model.add(MaxPooling2D(pool_size = (2, 2), strides = (2, 2)))\n",
+    "model.add(Conv2D(32, kernel_size = (5, 5), strides = (1, 1), activation = 'relu', kernel_regularizer = reg))\n",
+    "model.add(MaxPooling2D(pool_size = (2, 2), strides = (2, 2)))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(1024, activation = 'relu', kernel_regularizer = reg))\n",
+    "model.add(Dense(256, activation = 'relu', kernel_regularizer = reg))\n",
+    "model.add(Dense(3, activation = 'softmax', kernel_regularizer = reg))\n",
+    "\n",
+    "model.load_weights('LeNet-Reg-loss.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -376,22 +401,22 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Img1137.jpg</td>\n",
-       "      <td>Teenagers</td>\n",
+       "      <td>Adults</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Img3633.jpg</td>\n",
-       "      <td>Adults</td>\n",
+       "      <td>Toddler</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Img1474.jpg</td>\n",
-       "      <td>Adults</td>\n",
+       "      <td>Teenagers</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Img3459.jpg</td>\n",
-       "      <td>Teenagers</td>\n",
+       "      <td>Adults</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -404,14 +429,14 @@
       ],
       "text/plain": [
        "      Filename   Category\n",
-       "0  Img1137.jpg  Teenagers\n",
-       "1  Img3633.jpg     Adults\n",
-       "2  Img1474.jpg     Adults\n",
-       "3  Img3459.jpg  Teenagers\n",
+       "0  Img1137.jpg     Adults\n",
+       "1  Img3633.jpg    Toddler\n",
+       "2  Img1474.jpg  Teenagers\n",
+       "3  Img3459.jpg     Adults\n",
        "4  Img5578.jpg    Toddler"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
