--- a/VGG-16/VGG-16-Colab.ipynb
+++ b/VGG-16/VGG-16-Colab.ipynb
@@ -319,7 +319,7 @@
     "model.add(Dense(4096, activation = 'relu', kernel_regularizer = reg))\n",
     "model.add(Dense(4096, activation = 'relu', kernel_regularizer = reg))\n",
     "model.add(Dense(3, activation = 'softmax', kernel_regularizer = reg))\n",
-    "\n",
+    "#FCC Needs changing\n",
     "# model.load_weights('LeNet.h5')"
    ]
   },
@@ -350,7 +350,7 @@
    },
    "outputs": [],
    "source": [
-    "adam = Adam(learning_rate = 0.0001)\n",
+    "adam = Adam(learning_rate = 0.000001)\n",
     "model.compile(loss='categorical_crossentropy', optimizer=adam, metrics = ['categorical_accuracy'])"
    ]
   },
